[gd_scene load_steps=9 format=3 uid="uid://lncw32q6u87o"]

[ext_resource type="Script" path="res://addons/object_state_machine/demo/godot_v4/player/player.gd" id="1_kwc7e"]
[ext_resource type="Script" path="res://addons/object_state_machine/demo/godot_v4/player/state/idle.gd" id="2_o2sa6"]
[ext_resource type="Script" path="res://addons/object_state_machine/demo/godot_v4/player/state/walk.gd" id="3_wnnmx"]
[ext_resource type="Script" path="res://addons/object_state_machine/demo/godot_v4/player/state/air.gd" id="4_wfjhb"]
[ext_resource type="Script" path="res://addons/object_state_machine/demo/godot_v4/player/state/jump.gd" id="5_unena"]
[ext_resource type="Script" path="res://addons/object_state_machine/demo/godot_v4/player/state/fall.gd" id="6_ka5lt"]
[ext_resource type="Script" path="res://addons/object_state_machine/node_state_machine.gd" id="7_tb00h"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0jl5k"]
radius = 17.0
height = 74.0

[node name="CharacterBody2D" type="CharacterBody2D"]
script = ExtResource("1_kwc7e")
CLASS_IDLE_STATE = ExtResource("2_o2sa6")
CLASS_WALK_STATE = ExtResource("3_wnnmx")
CLASS_AIR_STATE = ExtResource("4_wfjhb")
CLASS_JUMP_STATE = ExtResource("5_unena")
CLASS_FALL_STATE = ExtResource("6_ka5lt")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -20.0
offset_top = -36.0
offset_right = 20.0
offset_bottom = 36.0
color = Color(0.539062, 0.163655, 0.456587, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_0jl5k")

[node name="LabelState" type="Label" parent="."]
offset_left = -47.0
offset_top = -63.0
offset_right = 49.0
offset_bottom = -37.0
text = "state"
horizontal_alignment = 1

[node name="DirectionDebug" type="ColorRect" parent="."]
offset_left = -30.0
offset_top = -2.0
offset_right = 30.0
offset_bottom = 2.0
color = Color(0.8, 0.180392, 0.956863, 1)

[node name="NodeStateMachine" type="Node" parent="."]
script = ExtResource("7_tb00h")
